--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -225,7 +225,7 @@ sapply(operons, \(o) {table(o$n)})
 ## Accessory functions
 
 ```{r genomic_features_byType_accessory_Functions}
-prepareFreqPlot <- function(gb, annot, rep, cne = NULL, tfbs = NULL, operons = NULL, win = 1000, direction = "left") {
+prepareFreqPlot_coding <- function(gb, annot, rep = NULL, cne = NULL, tfbs = NULL, operons = NULL, win = 1000, direction = "left") {
   l <- list()
   # Note that get_bps(direction="mid") is probably not what you think.
   if(direction == "mid") {
@@ -236,17 +236,27 @@ prepareFreqPlot <- function(gb, annot, rep, cne = NULL, tfbs = NULL, operons = N
   #l$cds    <- feature_coverage(gb,     cds(annot),           win = win, lab = "CDS",    direction = direction)
   l$intron <- feature_coverage(gb,     intronicParts(annot), win = win, lab = "intron", direction = direction)
   l$exon   <- feature_coverage(gb,     exonicParts(annot),   win = win, lab = "exon",   direction = direction)
-  l$reps   <- feature_coverage(gb,     rep,                  win = win, lab = "repeats",direction = direction)
-  if (!is.null(cne))
-    l$CNE   <- feature_coverage(gb,    cne,                  win = win, lab = "CNE",    direction = direction)
-  if (!is.null(tfbs))
-    l$tfbs  <- feature_coverage(gb,    tfbs,                 win = win, lab = "TFBS",   direction = direction)
   if (!is.null(operons))
     l$operons<-feature_coverage(gb,    operons,              win = win, lab = "operons",direction = direction)
   #reorder
   newOrder <- order(rowSums(l$intron@image))
   l$intron@image <- l$intron@image[newOrder,]
   l$exon@image   <- l$exon@image[newOrder,]
+  l
+}
+
+prepareFreqPlot_noncoding <- function(gb, annot, rep, cne = NULL, tfbs = NULL, operons = NULL, win = 1000, direction = "left") {
+  l <- list()
+  # Note that get_bps(direction="mid") is probably not what you think.
+  if(direction == "mid") {
+    gb <- resize(gb, 1, "center")
+    direction <- "left"
+  }
+  l$reps   <- feature_coverage(gb,     rep,                  win = win, lab = "repeats",direction = direction)
+  if (!is.null(cne))
+    l$CNE   <- feature_coverage(gb,    cne,                  win = win, lab = "CNE",    direction = direction)
+  if (!is.null(tfbs))
+    l$tfbs  <- feature_coverage(gb,    tfbs,                 win = win, lab = "TFBS",   direction = direction)
   l
 }
 
@@ -287,7 +297,7 @@ regions, frequency of introns and exons are comparable.  In contrary, within
 coalesced mapped regions, the exon annotations are over-represented.
 
 ```{r genomic_features_byType, fig.width=15, fig.height=5, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
-computePlotData <- function(target, query, CE=NULL, tfbs=NULL, operons = NULL, direction = "left") {
+computePlotData <- function(target, query, perpareFreqPlot, reps = NULL, CE=NULL, tfbs=NULL, operons = NULL, direction = "left") {
   pair <- paste(target, query, sep = "_")
   current_GB_aln_nonCoa     <- gbs[[pair]][   gbs[[pair]]$nonCoa]
   current_GB_aln_coa        <- gbs[[pair]][ ! gbs[[pair]]$nonCoa]
@@ -298,7 +308,7 @@ computePlotData <- function(target, query, CE=NULL, tfbs=NULL, operons = NULL, d
   
   targetGenome <- unique(genome(gbs[[pair]]))
   
-  prepareFreqPlot_default <- \(x) prepareFreqPlot(x, annots[[target]], reps[[targetGenome]], CE, tfbs, operons[[target]], direction = direction)
+  prepareFreqPlot_default <- \(x) perpareFreqPlot(x, annots[[target]], reps[[targetGenome]], CE, tfbs, operons[[target]], direction = direction)
   
   hmList <- SimpleList()
   hmList$aln_nonCoa <- prepareFreqPlot_default(current_GB_aln_nonCoa)
@@ -309,9 +319,11 @@ computePlotData <- function(target, query, CE=NULL, tfbs=NULL, operons = NULL, d
   hmList
 }
 
-hmList_to_plot <- computePlotData("Oki", "Osa", ces$ce__50__48$Oki_Osa, tfbs, operons)
+hmList_to_plot_noncoding <- computePlotData("Oki", "Osa", prepareFreqPlot_noncoding, reps = reps, CE = ces$ce__50__48$Oki_Osa, tfbs = NULL)
+hmList_to_plot_coding    <- computePlotData("Oki", "Osa", prepareFreqPlot_coding, reps = reps, CE = ces$ce__50__48$Oki_Osa, tfbs = NULL)
 
-(p_boundary <- rbind(
+mk_p_boundary <- function(hmList_to_plot) {
+rbind(
   hmList_to_plot$aln_nonCoa  |> prepareGGFreqPlot("01_isolated_alns"),
   hmList_to_plot$unmap       |> prepareGGFreqPlot("02_unmapped"),
   hmList_to_plot$syn_block   |> prepareGGFreqPlot("03_colinear_reg"),
@@ -323,7 +335,13 @@ hmList_to_plot <- computePlotData("Oki", "Osa", ces$ce__50__48$Oki_Osa, tfbs, op
   geom_line() +
   facet_wrap(~desc, nrow = 1) +
   theme_bw() +
-  ggtitle("Aligned on regions left boundary. CNE is 50/48.  Okinawa - Osaka"))
+  ggtitle("Aligned on regions left boundary. CNE is 50/48.  Okinawa - Osaka")
+}
+
+p_cod    <- mk_p_boundary(hmList_to_plot_noncoding)
+p_noncod <- mk_p_boundary(hmList_to_plot_coding)
+
+p_noncod / p_cod
 ```
 
 Most of the narrow-width aligned regions did not coalesce.  We use this
