--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -260,14 +260,48 @@ prepareFreqPlot_noncoding <- function(gb, annot, rep, cne = NULL, tfbs = NULL, o
   l
 }
 
+#' Prepare a long tibble for frequency plotting
+#' 
+#' Loop over a list of `Heatmap` objects to produce a long tibble that can be
+#' used with ggplot to plot frequency of each feature included in the list.
+#'
+#' @param x A list of `Heatmap` objects
+#' @param desc An additional description (character string)
+#'
+#' @return A long `tibble` that is the vertical concatenation of all tibbles
+#' produced for each element of the list `x`.  Its `what` column is made from
+#' the names of the heatmaps in the list, and its `desc` column is made from the
+#' `desc` arguments.  The other columns (`val`, `freq` and `pos`) originate from
+#' the `Heatmap_to_freq_tibble` function call.
 prepareGGFreqPlot <- function(x, desc = NULL) {
   l <- lapply(names(x), \(name){
-    val <- colSums(x[[name]]@image)
-    what <- name
-    tibble::tibble(val, freq = val / nrow(x[[name]]@image), what, pos = 1:length(val) - round(length(val)) / 2, desc)
+    tib <- Heatmap_to_freq_tibble(x[[name]])
+    tib$desc <- desc
+    tib$what <- name
+    tib
   })
    do.call(rbind, l)
 }
+
+#' Heatmap to long tibble for ggplot
+#' 
+#' Coerce a Heatmap object into a \dQuote{long} tibble with one value per
+#' position, either as raw counts or as a frequency.
+#' 
+#' The tibble can then be passed to ggplot.  The `image` matrix of the `Heatmap`
+#' object has one column per nucleotide position and it is assumed that its
+#' central column is for position zero.
+#'
+#' @param h a `Heatmap` object
+#'
+#' @return a `tibble` with `val`, `freq` and `pos` columns
+Heatmap_to_freq_tibble <- function(h) {
+  val  <- colSums(h@image)
+  tibble::tibble( val  = val
+                , freq = val / nrow(h@image)
+                , pos  = 1:ncol(h@image) - round(ncol(h@image)) / 2)
+}
+
 ```
 
 ## Centering on left-aligned boundaries.
@@ -297,6 +331,18 @@ regions, frequency of introns and exons are comparable.  In contrary, within
 coalesced mapped regions, the exon annotations are over-represented.
 
 ```{r genomic_features_byType, fig.width=15, fig.height=5, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
+#' Pre-compute feature frequencies in fixed windows
+#'
+#' @param target 3-letter name of one Oik genome
+#' @param query 3-letter name of another Oik genome
+#' @param perpareFreqPlot a `perpareFreqPlot` function
+#' @param reps `SimpleList` of `GRanges` of repeat regions
+#' @param CE `SimpleList` of `GRanges` with conserved non-coding elements
+#' @param tfbs `SimpleList` of `GRanges` of putative transcription factor binding sites
+#' @param operons `SimpleList` of `GRanges` of operon regions.
+#' @param direction Where to center the windows (`left`, `right` or `mid`)
+#'
+#' @return A `SimpleList` of Heatmap objects
 computePlotData <- function(target, query, perpareFreqPlot, reps = NULL, CE=NULL, tfbs=NULL, operons = NULL, direction = "left") {
   pair <- paste(target, query, sep = "_")
   current_GB_aln_nonCoa     <- gbs[[pair]][   gbs[[pair]]$nonCoa]
@@ -322,26 +368,27 @@ computePlotData <- function(target, query, perpareFreqPlot, reps = NULL, CE=NULL
 hmList_to_plot_noncoding <- computePlotData("Oki", "Osa", prepareFreqPlot_noncoding, reps = reps, CE = ces$ce__50__48$Oki_Osa, tfbs = NULL)
 hmList_to_plot_coding    <- computePlotData("Oki", "Osa", prepareFreqPlot_coding, reps = reps, CE = ces$ce__50__48$Oki_Osa, tfbs = NULL)
 
-mk_p_boundary <- function(hmList_to_plot) {
-rbind(
-  hmList_to_plot$aln_nonCoa  |> prepareGGFreqPlot("01_isolated_alns"),
-  hmList_to_plot$unmap       |> prepareGGFreqPlot("02_unmapped"),
-  hmList_to_plot$syn_block   |> prepareGGFreqPlot("03_colinear_reg"),
-  hmList_to_plot$bri         |> prepareGGFreqPlot("04_bridge"),
-  hmList_to_plot$aln_coa     |> prepareGGFreqPlot("05_colinear_alns")
-
-)|> ggplot() +
-  aes(pos, freq, col = what) +
-  geom_line() +
-  facet_wrap(~desc, nrow = 1) +
-  theme_bw() +
-  ggtitle("Aligned on regions left boundary. CNE is 50/48.  Okinawa - Osaka")
+list_of_heatmaps_to_long_tibble <- function(hmList_to_plot, desc = NULL) {
+  tib <-rbind(
+    hmList_to_plot$aln_nonCoa  |> prepareGGFreqPlot("01_isolated_alns"),
+    hmList_to_plot$unmap       |> prepareGGFreqPlot("02_unmapped"),
+    hmList_to_plot$syn_block   |> prepareGGFreqPlot("03_colinear_reg"),
+    hmList_to_plot$bri         |> prepareGGFreqPlot("04_bridge"),
+    hmList_to_plot$aln_coa     |> prepareGGFreqPlot("05_colinear_alns")
+  )
+  tib$desc2 <- desc
+  tib
 }
 
-p_cod    <- mk_p_boundary(hmList_to_plot_noncoding)
-p_noncod <- mk_p_boundary(hmList_to_plot_coding)
-
-p_noncod / p_cod
+rbind(
+  list_of_heatmaps_to_long_tibble(hmList_to_plot_noncoding, "noncoding"),
+  list_of_heatmaps_to_long_tibble(hmList_to_plot_coding, "coding")
+) |> ggplot() +
+  aes(pos, freq, col = what) +
+  geom_line() +
+  facet_wrap(~desc2 + desc, nrow = 2) +
+  theme_bw() +
+  ggtitle("Aligned on regions left boundary. CNE is 50/48.  Okinawa - Osaka")
 ```
 
 Most of the narrow-width aligned regions did not coalesce.  We use this
